# Sofware-AI-English

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  test.py
.github/workflows/: sync-to-english.yml
core/: agent_core.py  ai_brain.py  browser_core.py  logging_config.py  memory_system.py  task_engine.py  voice_io.py
